feat(api/todo): add filter
